[gd_scene load_steps=5 format=2]

[ext_resource path="res://JesusSaves/src/UserInterface/OptionsMenu/DefaultButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://JesusSaves/src/UserInterface/MainMenu/MainMenu.gd" type="Script" id=8]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 524.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 928.0
margin_bottom = 64.0

[node name="Logo" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 432.0
margin_right = 496.0
margin_bottom = 64.0
texture = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 928.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 55.0
margin_bottom = 440.0
size_flags_vertical = 3
custom_constants/separation = 1

[node name="NewGame" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=[
"FocusGroup",
"MainMenu",
] instance=ExtResource( 5 )]
margin_right = 55.0
margin_bottom = 14.0
text = "New Game"

[node name="Options" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 15.0
margin_right = 55.0
margin_bottom = 29.0
text = "Options"

[node name="Exit" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 30.0
margin_right = 55.0
margin_bottom = 44.0
text = "Exit"

[node name="RightMargin" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 928.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
